--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
                 <span>Volumn</span><input type="range">
             </div>
             <div class="column volume-slider">
-                <span>Show Keys</span><input type="checkbox">
+                <span>Show Keys</span><input cheked type="checkbox">
             </div>
         </header>
         <ul class="piano-keys">
-            <li class="key black">a</li>
+            <li class="key white">a</li>
             <li class="key black">w</li>
-            <li class="key black">s</li>
+            <li class="key white">s</li>
             <li class="key black">e</li>
-            <li class="key black">d</li>
+            <li class="key white">d</li>
             <li class="key black">f</li>
-            <li class="key black">t</li>
+            <li class="key white">t</li>
             <li class="key black">g</li>
-            <li class="key black">y</li>
+            <li class="key white">y</li>
             <li class="key black">h</li>
-            <li class="key black">u</li>
+            <li class="key white">u</li>
             <li class="key black">j</li>
-            <li class="key black">k</li>
+            <li class="key white">k</li>
             <li class="key black">o</li>
-            <li class="key black">l</li>
+            <li class="key white">l</li>
             <li class="key black">p</li>
-            <li class="key black">;</li>
+            <li class="key white">;</li>
         </ul>
     </div>
 
