comple the css file

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div class="column volume-slider">
                 <span>Volumn</span><input type="range">
             </div>
-            <div class="column volume-slider">
-                <span>Show Keys</span><input cheked type="checkbox">
+            <div class="column key-checkbox ">
+                <span>Show Keys</span><input checked type="checkbox">
             </div>
         </header>
         <ul class="piano-keys">
