comple the css file2

--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./main.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper">
-        <header>
-            <h2>Player Piano</h2>
-            <div class="column volume-slider">
-                <span>Volumn</span><input type="range">
-            </div>
-            <div class="column key-checkbox ">
-                <span>Show Keys</span><input checked type="checkbox">
-            </div>
-        </header>
-        <ul class="piano-keys">
-            <li class="key white">a</li>
-            <li class="key black">w</li>
-            <li class="key white">s</li>
-            <li class="key black">e</li>
-            <li class="key white">d</li>
-            <li class="key black">f</li>
-            <li class="key white">t</li>
-            <li class="key black">g</li>
-            <li class="key white">y</li>
-            <li class="key black">h</li>
-            <li class="key white">u</li>
-            <li class="key black">j</li>
-            <li class="key white">k</li>
-            <li class="key black">o</li>
-            <li class="key white">l</li>
-            <li class="key black">p</li>
-            <li class="key white">;</li>
-        </ul>
+      <header>
+        <h2>Player Piano</h2>
+        <div class="column volume-slider">
+          <span>Volumn</span><input type="range" />
+        </div>
+        <div class="column key-checkbox">
+          <span>Show Keys</span><input checked type="checkbox" />
+        </div>
+      </header>
+      <ul class="piano-keys">
+        <li data-key="a" class="key white">a</li>
+        <li data-key="w" class="key black">w</li>
+        <li data-key="s" class="key white">s</li>
+        <li data-key="e" class="key black">e</li>
+        <li data-key="d" class="key white">d</li>
+        <li data-key="f" class="key black">f</li>
+        <li data-key="t" class="key white">t</li>
+        <li data-key="g" class="key black">g</li>
+        <li data-key="y" class="key white">y</li>
+        <li data-key="h" class="key black">h</li>
+        <li data-key="u" class="key white">u</li>
+        <li data-key="j" class="key black">j</li>
+        <li data-key="k" class="key white">k</li>
+        <li data-key="o" class="key black">o</li>
+        <li data-key="l" class="key white">l</li>
+        <li data-key="p" class="key black">p</li>
+        <li data-key=";" class="key white">;</li>
+      </ul>
     </div>
 
     <script src="./main.js"></script>
-</body>
+  </body>
 </html>
